Make use of final modifier in lambda expressions
The commit introduces the `final` keyword in lambda expressions across various function tests to ensure immutability, and in `andThen` method implementations to align with best practices. Additionally, a new `Try` interface is added to handle exceptions gracefully, and inspection profiles are updated to warn against self-comparison.